[package]
name = "everia"
version = "0.0.1"
description = "downloader tool for everia.club"
license = "GPL-3.0-only"
repository = "https://github.com/HermesMaker/everia"
readme = "README.md"
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.62"
reqwest = { version = "0.12.28", features = ["gzip"] }
scraper = "0.25.0"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
urlencoding = "2.1.3"
